LTN①⑤：6错题/23题错题

--- a/_posts/《红宝书相关博客》/2025-01-26-LTN①⑤.md
+++ b/_posts/《红宝书相关博客》/2025-01-26-LTN①⑤.md
@@ -2,44 +2,30 @@
 layout:     post
 title:      面试题整理
 subtitle:  
-date:       2019-07-08
+date:       2025-01-27
 author:     
 header-img: 
 catalog: true
 tags:
-    - < 面试题整理 >
+    - < LTN >
 typora-root-url: ..
 ---
 
 
 
-# LTN做题
+# LTN做题①⑤
 
-> ①⑤ 错题重做
+> ①⑤ 错题重做 - 23题
 
-❌作业6：new操作符实例化一个对象的过程
-❌作业66：React如何处理错误
-❌作业3：迭代器原理
-❌2021.06 子盒子在父盒子中水平垂直居中有几种方法？
-❌作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
+2.9 - 14 题 2.10 - 9题  = 2h57min
+
+✅作业6：new操作符实例化一个对象的过程
+✅作业66：React如何处理错误
+✅作业3：迭代器原理
+✅2021.06 子盒子在父盒子中水平垂直居中有几种方法？
+✅作业72：react 的 生命周期有哪些，在不同生命周期中做什么事情？
 ❌作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
-❌作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
-❌2021.07 数组扁平化（一层、全部展开、指定深度）
-❌作业25：简单写下 请求创建过程
-❌作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
-❌作业55：flex 常见缩写
-❌作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
-❌作业61：常见的数据结构有哪些
-❌作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
-❌作业76：显卡的作用？
-❌作业90：金玉满堂是什么意思？在花卉中的说法是什么？
-❌作业91：三次握手的过程和具体包的作用
-❌作业92：前端中的序列化是什么？常见序列化方法
-❌作业93：闭包的作用和原理
-❌2021.07 事件流 + 事件模型
-❌2021.06 链表 141. 环形链表
-❌2021.09 get和post有什么区别
-❌作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
+✅作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
 
 ```js
 Promise.resolve().then(() => {
@@ -55,10 +41,8 @@ Promise.resolve().then(() => {
     console.log(5);
 }).then(() => {
     console.log(6);
-
-})
+})  
 ------
-
 async1 = async () => {
     console.log('async1 start');
     await async2();
@@ -86,6 +70,674 @@ new Promise(function(resolve) {
 console.log('script end');
 ```
 
+❌作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
+✅2021.07 数组扁平化（一层、全部展开、指定深度）
+✅作业25：简单写下 请求创建过程
+✅作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
+❌作业55：flex 常见缩写
+✅作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
+✅作业61：常见的数据结构有哪些
+✅作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
+✅作业76：显卡的作用？
+✅作业90：金玉满堂是什么意思？在花卉中的说法是什么？
+✅作业91：三次握手的过程和具体包的作用
+❌作业92：前端中的序列化是什么？常见序列化方法
+❌作业93：闭包的作用和原理
+❌2021.07 事件流 + 事件模型
+✅2021.06 链表 141. 环形链表
+✅2021.09 get和post有什么区别
+
+```js
+// 2021.09 get和post有什么区别
+- 第二遍 2025.2.10 -
+get：参数在请求行上；参数长度有限制 2kb；浏览器默认缓存 GET 请求结果；回退无害，参数在链接中，重新发起请求
+post：参数在请求体中；参数长度无限制；默认不缓存，可以手动设置；回退有害，参数不存储在链接中
+
+- 第一遍 2025.2.8 -
+❌ // 1、从四个方面描述：数据参数 + 参数长度 + 回退安全性 + 缓存
+get：
+	请求参数在链接上； ⭐️ // 也就是请求行
+	参数大小限制；❌ // 2、参数长度：get - 大小限制2kb
+    ❌ // 4、回退安全性：get - 回退无害，参数被保留在浏览器历史记录
+    ❌ // 6、缓存：get - 请求会被浏览器主动 cache
+post：
+	请求参数在请求体；
+    数据大小限制很大 2kb；❌ // 3、参数长度：post - 没有限制
+    ❌ // 5、回退安全性：post - 回退时，post请求会被再次提交，参数不会被保留
+    ❌ // 7、缓存：post - 不会缓存，除非手动设置
+```
+
+```js
+// 2021.06 链表 141. 环形链表
+- 第二遍 2025.2.10 -
+function cricle(head) {
+    try{
+        JSON.stringify(head);
+        return false
+    }catch(e){
+        return true
+    }
+}
+function circle2(head) {
+    while(head) {
+        if(head.circle){
+            return true
+        }
+        head.circle = true;
+        head = head.next;
+    }
+    return false
+}
+
+- 第一遍 2025.2.8 -
+function circle(head) {
+    try{
+        JOSN.stringify(head);
+        return false;
+    } catch(e){
+        return true;
+    }
+}
+function circle2(head) {
+    while(head.next) { ❌ // 1、 while(head) 即可
+        if(head.circle) {
+            return true
+        }
+        head.circle = true;
+        head = head.next;
+    }
+    return false
+}
+```
+
+```js
+// 2021.07 事件流 + 事件模型
+- 第二遍 2025.2.10 -
+事件流： 捕获 从上至下，直到具体节点 window-document-body-html-... ；冒泡 从内至外，直到最外层节点 
+事件模型： 现代事件模型 先捕获，再具体节点执行事件处理函数，最后冒泡
+❌ // 1、现代事件模型：是事件委托，利用事件冒泡，将事件处理程序添加到父元素；DOM2级事件模型才是我写的：捕获+处理+冒泡
+
+- 第一遍 2025.2.8 -
+先捕获，再冒泡
+❌ /** 缺少详细描述
+	捕获：从 window->document->html->body 传递到最具体的节点
+	冒泡：从具体节点逐渐向上传播到DOM最高层父节点
+	现代事件模型：事件委托-利用事件冒泡，将事件处理程序添加到父元素
+	DOM2级事件模型：捕获+处理+冒泡
+*/
+```
+
+```js
+// 作业93：闭包的作用和原理
+- 第二遍 2025.2.10 -
+闭包：内部函数引用外部函数的变量，外部函数执行完后，原本应该清理变量，但因为引用，就会以 closure 存储，以便存储值，后续访问 ⭐️ // 活动对象没有被销毁，词法作用域
+作用：保存变量值、私有变量 ❌ // + 函数工厂、回调函数
+
+- 第一遍 2025.2.8 -
+外部函数执行完毕后，会清理执行栈和内存将变量清理；但是如果内部函数引用了变量，变量将不被清理，以 closure 存储在内存 ⭐️ // 活动对象没有被销毁，词法作用域
+用于保存变量持续的值 ❌ // 保存状态 + 数据封装/私有变量 + 函数工厂 + 回调函数
+```
+
+```js
+// 作业92：前端中的序列化是什么？常见序列化方法
+- 第二遍 2025.2.10 -
+序列化：将对象等转换为方便存储、传输的结构 ⭐️ // 将数据结构、对象转换
+JSON.stringify、new FormData(form)
+❌ // 1、JSON.stringify 无法处理 Function、无法处理循环引用；new FormData 收集表单数据并序列化，转换成键值对格式
+
+- 第一遍 2025.2.8 -
+将不同的数据结构转换为 JSON
+❌ // 1、序列化是将数据结构/对象转换为可以存储/传输的格式的过程
+JSON.stringify ⭐️ // 特殊点：无法处理 Function 和 互相引用，循环引用时会报错
+❌ // 2、少写了 new FormData(form) 收集表单数据并序列化，转换成键值对的格式
+```
+
+```js
+// 作业91：三次握手的过程和具体包的作用
+- 第二遍 2025.2.10 -
+客户端和服务端建立 TCP 连接，SYN 序列编号包，ACK 确认包（标志位）⭐️ // SYN 同步序列编号包
+客户端发起 SYN 
+服务端 SYN + ACK
+客户端 ACK
+
+- 第一遍 2025.2.8 -
+客户端：SYN
+服务端：SYN + ACK
+客户端：ACK
+SYN - ...不记得了 ❌ // 1、SYN是同步序列编号包
+ACK - 确认信息，有序列号 ❌ // 2、ACK确认包
+```
+
+```js
+// 作业90：金玉满堂是什么意思？在花卉中的说法是什么？
+- 第二遍 2025.2.10 -
+形容财富很多，比喻人学识丰富
+玉堂春富贵：玉兰 海棠 迎春 牡丹 桂花
+
+- 第一遍 2025.2.8 -
+金玉满堂：很多内涵，夸奖 ⭐️ // 形容财富很多、比喻学识丰富
+海棠、(其他的不记得了)
+❌ // 1、花卉中的说法 玉堂春富贵 - 玉兰(玉)、海棠(堂)、迎春(春)、牡丹(富)、桂花(贵)
+```
+
+```js
+// 作业76：显卡的作用？
+- 第三遍 2025.2.10 -
+合成图像，存储在后缓冲区
+前后缓冲区替换
+
+- 第二遍 2025.2.2 -
+用于绘制帧
+在后区渲染好之后，直接替换前区帧
+⭐️ // 合成新的图像，并将图形保存到后缓存区
+```
+
+```js
+// 作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
+- 第四遍 2025.2.10 -
+react 中 合成事件+生命周期函数 中都是异步 - 批量更新机制，在执行事件处理函数时，遇到 setState 先用队列存储，执行完函数后，将队列中的 state 统一计算处理，修改 state 一次，触发一次渲染
+在原生事件中，是同步，触发一次 setState 重新渲染一次
+
+- 第三遍 2025.2.2 -
+React 合成事件 - 异步；原生事件 - 同步
+❌ // 1、除了合成事件，还有「生命周期函数」中都是异步
+React 在处理 setState 的时候，在执行回调函数时，会创建一个队列存储，执行完回调函数，统一处理队列中的 setState ，有个合并处理机制 ⭐️ // 批量处理机制 + 更新一次 state ，触发一次重新渲染
+在原生事件中不受 React 管控，直接执行 ⭐️ // setState 一次，就会触发一次渲染
+- 第一遍 -
+❌ // 1、除了合成事件，还有生命周期函数
+```
+
+```js
+// 作业61：常见的数据结构有哪些
+- 第四遍 2025.2.9 -
+按照逻辑结构分
+结构型：数组、链表、栈、队列
+非结构型：树、图
+
+- 第三遍 2025.2.2 -
+结构化数据：队列、栈、链表 ❌ // 1、少写了一个类型：数组
+非结构化数据：树、图
+```
+
+```js
+// 作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
+- 第五遍 2025.2.9 -
+高阶函数：输入或者输出的值是函数，map
+高阶组件：输入参数是组件
+副作用：函数式编程的概念，除了返回值，还会修改外部其他值，例如 IO、全局变量
+const f = (My) => {
+	return class extends React.Component{
+		constructor(props) {
+    		super(props);
+		}
+		render() {
+            return <My {...this.props}/>
+        }
+	}
+}
+
+- 第四遍 2025.2.2 -
+高阶函数：输入/输出是函数的函数，例如 map
+高阶组件：输入是组件
+副作用：在函数内部会修改外部参数、全局参数、IO ⭐️ // 除了返回值
+function fun(Child){
+    return class extends React.Component {
+        constructor(props) {
+            super(props);
+        }
+        render() {
+            return Child
+            ❌ // 1、<Child {...this.props} />
+        }
+    }
+}
+```
+
+```js
+// 作业55：flex 常见缩写
+- 第五遍 2025.2.9 -
+flex: 0; // 0 0 auto ❌ // 1、把 0 0 auto 的缩写写错，应该是 flex: none;
+flex: initial; // 0 1 auto
+flex: auto; // 1 1 auto
+flex: 1; // 1 1 0
+
+- 第四遍 2025.2.2 -
+flex: none; // 0 0 auto
+flex: 1; // 1 1 0
+flex: auto; // 1 1 auto
+❌ // 1、少写了一个 flex: initial; // 0 1 auto
+- 第二遍 -
+❌ // 1、把 0 0 auto 的缩写写错，应该是 flex: none;
+- 第一遍 -
+❌ // 1、把 0 0 auto 的缩写写错，应该是 flex: none;
+```
+
+```js
+// 作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
+- 第三遍 2025.2.9 -
+起舞弄清影，何似在人间
+苏轼 《水调歌头 明月几时有》
+明月几时有，把酒问青天，不知天上宫阙，今夕是何年。
+我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
+转朱阁，低绮户，照无眠。⭐️ // 顺序反了 - 起舞弄清影，何似在人间。转朱阁，低绮户，照无眠。
+起舞弄清影，何似在人间。
+⭐️ // 不应有恨，何事长向别时圆。人有悲欢离合，月有阴晴圆缺，此事古难全。但愿人长久，千里共婵娟。
+千里共婵娟。
+
+- 第二遍 2025.2.2 -
+宋 苏轼/苏东坡  ❌ // 1、题目记不起来：《水调歌头 明月几时有》
+我欲乘风归去，又恐琼楼玉宇，高处不胜寒
+不知天上宫阙，今夕是何年，何似在人间 ❌ // 2、乱序：起舞弄清影，何似在人间
+/**
+	明月几时有？把酒问青天。不知天上宫阙，今夕是何年。
+	我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
+	起舞弄清影，何似在人间。
+	转朱阁，低绮户，照无眠。
+	不应有恨，何事长向别时圆。
+	人有悲欢离合，月有阴晴圆缺，此事古难全。
+	但愿人长久，千里共婵娟。
+*/
+```
+
+```js
+// 作业25：简单写下 请求创建过程
+- 第五遍 2025.2.9 -
+function request(url) {
+    const xhr = new XMLHttpRequest();
+    xhr.ontimeout = ()=>{};
+    xhr.onerror = ()=>{};
+    xhr.onreadystatechange = function(res) {
+        switch(res.readyState) {
+            case 0:
+                break;
+            case 4:
+                if(res.status === 200 || res.status === 301) { ⭐️ // status 在this上
+                    console.log(this.responseText)
+                }
+        }
+    }
+    xhr.open('GET', url, true);
+    xhr.timeout = 3000;
+    xhr.responseType = 'text';
+    xhr.setRequestHeader(key, value);
+    xhr.send();
+}
+
+- 第四遍 2025.2.2 -
+function request(url) {
+    let xhr = new XMLHttpRequest();
+    xhr.onerror = () => {}
+    xhr.ontimeout = () => {}
+    xhr.onreadystate = function (res) {  ❌ // 1、函数名称错误：onreadystatechange
+        switch(this.readyState) { ❌ // 2、属性不在 this 上，在 res 上：res.readyState
+            case 0:// 还未开始请求
+                ❌ // 3、switch 中 0 表示请求还没开始，要使用 break 跳出循环
+            case:4
+                if(this.status === 200 || this.status === 304) {
+                    console.log(this.responseText)
+                }
+        }
+    }
+    xhr.open('GET', url, true); // 允许异步
+    xhr.timeout = 3000;
+    xhr.responseType = 'text';
+    xhr.setRequestHeader(key, value);
+    xhr.send();
+}
+- 第二遍 -
+❌ // 1、属性名称记错 ：res.readyState
+- 第一遍 -
+❌ // 1、open 的参数顺序记错了：xhr.open('GET', url, true)
+```
+
+```js
+// 2021.07 数组扁平化（一层、全部展开、指定深度）
+- 第六遍 2025.2.9 -
+一层: arr.flat()/[].concat(...arr)/[].concat.call([], ...arr)/[].concat.apply([], arr)
+全部: arr.flat(Infinity)/arr.toString().split(',')/
+function expense(arr, deep) {
+    return arr.reduce((pre, cur) => pre.concat(Array.isArray(cur) && deep>1 ? expense(cur, deep-1) : cur), [])
+}
+
+- 第五遍 2025.1.31 -
+一层：arr.flat()、[].concat(...arr)、[].concat.call([], ...arr)、[].concat.apply([], arr)
+全部展开：arr.flat(Infinity)、arr.toString().split(',')、JSON.parse(JSON.stringify(arr))
+❌ //  JSON.parse(JSON.stringify(arr)) 是用于深拷贝的，不能展开
+function expense(arr, deep = 1) {
+    return arr.reduce((pre, cur) => {
+        return pre.concat(Array.isArray(cur) && deep > 1 ? expense(cur, deep - 1) : cur)
+    }, [])
+}
+- 第四遍 2025.1.25 -
+- 第三遍 2025.1.24 -
+❌ // 1、少写了 arr.flat(Infinity)
+❌ // 2、JSON.stringify 不会展开数组
+❌ // 3、全部展开递归函数中，pre 的值不要使用 push 来更新 - concat 既能处理数组，也能处理非数组
+- 第二遍 2025.1.19 -
+❌ // 1、deep 传递的时候要减一
+```
+
+```js
+// 作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
+- 第四遍 2025.2.9 -
+mysql2 是给node环境的数据库驱动，可以直接连接数据库，但是需要写比较多的 SQL
+Sequelize ORM 可以将表和行解析为对象，将数据库的操作以函数式呈现
+❌ // 1、不是解析，是映射：将表和行映射为对象模型
+mysql2
+import { createPool } 'mysql2/promise';
+const pool = createPool({host, user, password, database});
+const connect = await pool.getConnect();
+const [rows] = await connect.execute('SELECT * FROM table');
+sequelize
+import { Sequelize, DataType, Modal } from 'sequelize';
+const se = new Sequelize({ host, user, password })
+❌ // 2、实例化的参数错误 new Sequelize(database, user, password, { host: 'localhost', dialect: 'mysql2'})
+方法一
+class Usr extends Modal {}
+Usr.init({
+    name: DataType.STRING
+})
+❌ // 3、init 还需要第二个参数传递连接实例，模型名称
+/**
+Usr.init({ name: DataTypes.STIRNG }, {
+	sequelize: se, // 传递连接实例
+	modalName: 'Usr' // 模型名称
+})
+*/
+方法二
+se.define('table_name', {
+    name: {
+        type: DataType.STRING
+    }
+}, {
+    underscore: false
+})
+
+- 第三遍 2025.1.31 -
+mysql2 是适用于node场景的 mysql 驱动，可以直连数据库，但是需要写很多 SQL
+⭐️ // 提供了 mysql2/promise 模块，允许 async/await 、管理多个数据库连接；没有内置的对象关系映射ORM
+import { createPool } from 'mysql2' ❌ // 1、依赖包错了 mysql2/promise
+const pool = createPool({host, user, password}); ❌ // 2、少写了 database
+const connection = await pool.getConnection(); ❌ // 3、获取连接的函数错了 await pool.getConnect()
+const data = connection.execute('SELECT * FROM table') ❌ // 4、需要使用 await：const [rows] = await connection.execute('SELECT * FROM table')
+--
+Sequelize 数据库模块，ORM 把整个数据库表对象化，可以通过函数式编程直接调用使用，执行事务
+⭐️ // ORM 把数据库的表和行映射为对象模型
+import { sequelize, Datatypes, Modal } from 'sequelize'
+const se = new sequelize(database, user, password, {
+    host: 'localhost',
+    dialect: 'mysql2'
+})
+创建连接后，会一直保持连接状态，直到调用 se.close() 关闭连接
+class se extends Modal {}
+se.define('table', {
+    id: Datatypes.number
+}, {
+    underScore: false;
+})
+❌ // 5、有两种模型定义方法：一种是 define，另一种 extends Modal + init
+/**
+const User = se.define('table', {
+    id: Datatypes.number
+}, {
+    underScore: false;
+})
+--
+class User extends Modal {}
+User.init({
+	id: Datatypes.number
+}, {
+	sequelize: se, // 传递连接实例
+	modalName: 'User' // 模型名称
+})
+最后调用： User.findAll({ attribute: ['id', 'name'] })
+*/
+
+- 第二遍 2025.1.26 -
+❌ // 1、mysql2 的依赖包是 mysql2/promise
+❌ // 2、mysql2 创建连接池不需要 await:const pool = createPool({host, user, password, database})
+❌ // 3、mysql2 获取连接时需要 await:const connection = await pool.getConnect()
+❌ // 4、mysql2 查询数据时需要 await:const [rows] = await connectiom.execute('SQL')
+❌ // 5、sequelize 实例化创建连接 const s = new sequelize(database, user, password, { host, dialect })
+❌ // 6、sequelize 模型定义的底层 - 先扩展，再init定义
+
+- 第一遍 2025.1.22 -
+❌ // 1、mysql2 提供的连接的两个特点： mysql2/promise 支持 async/await + 管理多个数据库连接池
+❌ // 2、sequelize 将数据库的表和行映射为对象模型，直接通过 js 操作
+```
+
+```js
+// 作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
+- 第二遍 2025.2.9 -
+事件 -同步 - 主线程执行 - 调用栈执行 - 调用栈清空前，调用事件队列中的函数 - 直到清空
+    -异步 - Event Table - 触发后，回调函数加入事件队列 ⭐️ // Event Queue + 触发时机 - 等异步任务有了结果，将回调函数投入事件队列
+宏任务：IO、UI渲染、js执行、setTimeout/setTimeInterval
+微任务：Promise.then、async/await、MutationObserver
+125364
+script start - async1 start - async2 - promise1 - script end - async1 end - promise2 - promise3- setTimeout
+
+- 第一遍 2025.1.30 -
+时间循环系统
+事件：同步类型 - 主线程执行 - 执行完成，清理执行栈之前，从事件队列中获取事件执行 - 所有微任务执行完毕后，进入下一个事件循环
+	 异步类型 - Event Table - 将回调函数投入事件队列 ⭐️ // Event Queue
+⭐️ // 等异步任务有了结果，将回调函数投入事件队列
+宏任务 ： UI渲染、IO下载、js代码、setTimeout/setTimeInterval ⭐️ // IO表示下载和交互
+微任务： MutationObserver、Promise.then、async/await
+1 5 2 6 3 4 ❌ // 125364 
+script start - async1 start - async2 - promise1 - script end
+- async1 end - promise2 - promise3 - setTimeout
+```
+
+```js
+// 作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
+- 第四遍 2025.2.9 -
+预渲染：主要是服务端提前渲染SSR、客户端提前构建SSG、增量客户端构建ISR
+❌ // 1、名称错误：服务端渲染SSR、静态生成SSG、增量静态生成ISR
+模式：服务端渲染 - 在请求时，服务端将引用数据插入，返回给客户端后，客户端只需要渲染，不需要js执行
+⭐️ // getServerSideProps
+客户端构建 - 在构建时，提前将页面渲染完成，并使用 revalidate 设置时间，到时间后重新构建
+⭐️ // generateStaticParams
+❌ // 2、缺少说明一下结果：客户端、服务端生成的结果都是 HTML，得说明一下
+SSR
+import { getServerSideState } from 'next'
+❌ // 3、函数名称、依赖包错误：import { getServerSideProps } from 'next/server'
+function Blog() { return <div>11</div> }
+export default Blog;
+export function getServerSideState(props) {
+    return <Blog {...this.props} />
+}
+❌ // 4、SSR 的核心是在服务端提前获取数据 -> 传入组件
+/**
+export function getServerSideProps() {
+	const res = await fetch('xxxx');
+	const data = await res.json();
+	return { props: data }
+}
+export default function Blog({data}) {return <div>{data}</div>}
+*/
+SSG
+function Blog({data}) { return <div>{data}</div> }
+export function generateParams() {
+    ❌ // 5、函数名称错误：generateStaticParams
+    return [{data: 'first'}, {data: 'second'}]
+}
+export const revalidate = 60; // 秒
+export default Blog;
+
+- 第三遍 2025.1.31 -
+预渲染：包含服务端渲染 SSR、静态生成SSG、ISR 增量静态生成
+SSR:getServerSideProps 客户端每次请求，都在服务端构建 HTML，动态引入 data 数据，返回给客户端直接渲染，而不是交给客户端js
+SSG+ISR:getDerivedStateParams + revalidate 在构建时，直接生成 HTML，超过更新时间后，后台直接重新构建
+❌ // 1、记错函数名称，13.x 之前是 getStaticProps，现在已经改为 generateStaticParams，用于生成动态路由的参数列表
+SSR
+import { getServerSideProps } from 'next/server'
+function Blog({ data }) { return <div>{data}</div> }
+async function getServerSideProps() {
+    const data = await fetch('xxxx');
+    return { props: { data: data.json() } }
+    ❌ // 2、data.json() 是异步的，异步解析数据，处理 json 数据转换为 js 对象 - const res = await data.json;
+}
+export default Blog;             
+SSG
+function Blog({ data }) { return <div>{data}</div> }
+async function getDerivedStateParams() {
+    const data = await fetch('xxxx');
+    return { props: { data: data.json() } }
+    ❌ // 3、return 的应该是个路由列表 例如 return [{slug: 'first'}, {slug: 'second'}]
+}
+const revalidate = 60; // 秒
+❌ // 4、export const revalidate = 60; // 页面重新验证时间
+export default Blog;
+                         
+- 第二遍 2025.1.26 -
+❌ // 1、SSR getServerSideProps: fetch 数据需要 await: const data = await fetch('xxx')
+❌ // 1、SSR getServerSideProps: 异步解析数据需要 await: const res = await data.json()
+- 第一遍 2025.1.22 -
+❌ // 1、SSG generateStaticParams 用于生成动态路由的参数列表
+❌ // 2、SSG revalidate 用于定义页面重新验证时间 - 页面将重新生成，运行时生成/更新静态页面以增量更新
+```
+
+```js
+// 作业72：react 的 生命周期有哪些，在不同生命周期中做什么事情？
+- 第七遍 2025.2.9 -
+挂载阶段 constructor(初始化state和事件处理函数的this) render getDerivedStateFromProps componentDidMount
+更新阶段 shouldComponentUpdate(nextProps, nextState) componentDidUpdate(prevProps, prevState) render getDerivedStateFromProps
+卸载阶段 componentWillUnMount
+useEffect：模拟三个componentDidMount componentDidUpdate componentWillUnMount
+useLayoutEffect：commit 阶段后同步执行，阻塞重绘
+
+- 第六遍 2025.1.31 -
+类组件
+挂载阶段
+getDerivedStateFromProps
+componentDidMount - 首次渲染执行
+render
+❌ // 1、少写了 constructor - 初始化 state 和绑定事件处理函数的 this
+更新阶段
+getDerivedStateFromProps
+componentDidUpdate - 更新后执行
+shouldComponentUpdate(nextProps, nextState) - 返回布尔值判断是否需要重新渲染
+render
+卸载阶段
+componentWillUnMount - 卸载前执行
+
+函数组件
+useEffect 模拟 componentDidMount回调函数执行一次 ⭐️ // 内部函数
+		  模拟 componentDidUpdate 依赖更新，再次执行回调函数
+          模拟 componentWillUnMount 返回一个清理函数，在组件卸载前执行
+useLayoutEffect 在 commit 阶段后，同步执行函数，阻塞重绘
+- 第五遍 2025.1.25 -
+- 第四遍 2025.1.24 -
+❌ // 1、shouldComponentUpdate 写错在挂载阶段，实际应该归属于更新阶段
+❌ // 2、阶段划分是：挂载-更新-卸载，其中更新阶段记错了 - 应该是当组件的 state/props 变化，进入更新阶段，重新执行 render 函数来更新 DOM
+- 第三遍 2025.1.19 -
+❌ // 1、挂载阶段：少写了 constructor - 初始化 state 和绑定时间处理函数的 this
+❌ // 2、除了类组件函数的生命周期，还要意识到函数组件也通过 hooks 模拟生命周期
+```
+
+```js
+// 2021.06 子盒子在父盒子中水平垂直居中有几种方法？
+- 第二遍 2025.2.9 -
+1、.father { display: flex; justify-content: center; align-items: center; }
+2、.father { display: table-cell; text-align: center; vertical-align: middle; }
+.son { display: inline-block; }
+3、.son { position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; }
+4、.son { position: absolute; transform: translate(-50%, -50%); top: 50%; left: 50%; }
+
+- 第一遍 2025.1.30 -
+①flex .father { display: flex; justify-content: center; align-items: center; }
+② .son { position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto;  }
+③ .son { position: absolute; transform: translate(-50%, -50%); left: 50%; top: 50%; }
+④ .son { display: table-cell; text-align: center; vertial-align: middle; } ❌ // 1、不是给子元素 添加 table-cell，这个方法的核心是把 父盒子 设置为 table-cell，使得另外两个属性生效 - 而子盒子作为行内块类型，垂直、居中 .father { display: table-cell; text-align: center; vertical-align: middle; } .son { display: inline-block; }
+```
+
+```js
+// 作业3：迭代器原理
+- 第三遍 2025.2.9 -
+使用 next 访问可迭代对象的所有值，不需要知道对象类型 ⭐️ // 遍历
+
+- 第二遍 2025.1.30 -
+提供暂停和恢复代码执行能力，[Symbol.iterater] 默认迭代器
+yield 暂停，next 恢复执行 {done, value}
+❌ // 迭代器使用 next 方法在可迭代对象中遍历数据
+- 第一遍 2024.12.25 -
+```
+
+```js
+// 作业66：React如何处理错误
+- 第七遍 2025.2.9 -
+static getDerivedStateFromError + componentDidCatch 处理 render + commit 阶段的错误，是为了错误不蔓延到整个应用，影响 UI 展示
+class ErrorBoundaries extends React.Component {
+    constructor(props) {
+        super(props);
+        this.state = { hasError: false }
+    }
+    static getDerivedStateFromError() { // 返回新的 state
+        return { hasError: true }
+    }
+    componentDidCatch(e, info) {
+        console.log(info);
+    }
+    render() {
+        if(this.state.hasError) {
+            return <div> There are errs. </div>
+        } else {
+            return this.props.children;
+        }
+    }
+}
+
+- 第六遍 2025.1.29 -
+React 提供两个函数处理错误 static getStateFromError()、componentDidCatch，用于捕获 
+❌ // 1、静态函数名称错了 getDerivedStateFromError
+render+commit 阶段的错误，阻止错误蔓延到整个应用影响 UI 展示
+几个情况不会捕获：异步、回调、ssr、错误边界内部
+class Boundaries extends React.Component{
+    constructor() {
+        super(props);
+        this.state = { hasError: false }
+    }
+    static getStateFromError() { ❌ // 2、getDerivedStateFromError
+        return { hasError: true }
+    }
+    componentDidCatch(e, info) {
+        console.log(e)
+    }
+    render() {
+        if(this.state.hasError) {
+            return <p> There are errs. </p>
+        } else {
+            return this.props.children;
+        }
+    }
+}
+- 第五遍 2025.1.22 -
+- 第四遍 2025.1.18 -
+```
+
+```js
+// 作业6：new操作符实例化一个对象的过程
+- 第三遍 2025.2.9 -
+function newf() {
+    const ctor = [].shift.call(arguments);
+    const obj = new Object();
+    obj.__proto__ = ctor.prototype;
+    const res = ctor.call(obj, ...arguments);
+    return typeof res === 'object' ? res : obj;
+}
+
+- 第二遍 1.28 -
+function newFun () {
+    let obj = new Object();
+    const ctor = [].shift.call(arguments);
+    obj.__proto__ = ctor; ❌ // 1、不是构造函数，是构造函数的原型对象 obj.__proto__ = ctor.prototype;
+    const res = ctor.apply(obj, arguments);
+	return typeof res === 'object' ? res : obj;
+}
+- 第一遍 1.20 -
+❌ // 1、不是调整 constructor 的指向
+```
+
 
 
 
@@ -111,90 +763,6 @@ console.log('script end');
 ❌2021.07 事件流 + 事件模型
 ❌2021.06 链表 141. 环形链表
 ❌2021.09 get和post有什么区别
-
-```js
-// 2021.09 get和post有什么区别
-❌ // 1、从四个方面描述：数据参数 + 参数长度 + 回退安全性 + 缓存
-get：
-	请求参数在链接上； ⭐️ // 也就是请求行
-	参数大小限制；❌ // 2、参数长度：get - 大小限制2kb
-    ❌ // 4、回退安全性：get - 回退无害，参数被保留在浏览器历史记录
-    ❌ // 6、缓存：get - 请求会被浏览器主动 cache
-post：
-	请求参数在请求体；
-    数据大小限制很大 2kb；❌ // 3、参数长度：post - 没有限制
-    ❌ // 5、回退安全性：post - 回退时，post请求会被再次提交，参数不会被保留
-    ❌ // 7、缓存：post - 不会缓存，除非手动设置
-```
-
-```js
-// 2021.06 链表 141. 环形链表
-function circle(head) {
-    try{
-        JOSN.stringify(head);
-        return false;
-    } catch(e){
-        return true;
-    }
-}
-function circle2(head) {
-    while(head.next) { ❌ // 1、 while(head) 即可
-        if(head.circle) {
-            return true
-        }
-        head.circle = true;
-        head = head.next;
-    }
-    return false
-}
-```
-
-```js
-/
-/ 2021.07 事件流 + 事件模型
-- 第一遍 2025.2.8 -
-先捕获，再冒泡
-❌ /** 缺少详细描述
-	捕获：从 window->document->html->body 传递到最具体的节点
-	冒泡：从具体节点逐渐向上传播到DOM最高层父节点
-	现代事件模型：事件委托-利用事件冒泡，将事件处理程序添加到父元素
-	DOM2级事件模型：捕获+处理+冒泡
-*/
-```
-
-```js
-// 作业93：闭包的作用和原理
-- 第一遍 2025.2.8 -
-外部函数执行完毕后，会清理执行栈和内存将变量清理；但是如果内部函数引用了变量，变量将不被清理，以 closure 存储在内存 ⭐️ // 活动对象没有被销毁，词法作用域
-用于保存变量持续的值 ❌ // 保存状态 + 数据封装/私有变量 + 函数工厂 + 回调函数
-```
-
-```js
-// 作业92：前端中的序列化是什么？常见序列化方法
-- 第一遍 2025.2.8 -
-将不同的数据结构转换为 JSON
-❌ // 1、序列化是将数据结构/对象转换为可以存储/传输的格式的过程
-JSON.stringify ⭐️ // 特殊点：无法处理 Function 和 互相引用，循环引用时会报错
-❌ // 2、少写了 new FormData(form) 收集表单数据并序列化，转换成键值对的格式
-```
-
-```js
-// 作业91：三次握手的过程和具体包的作用
-- 第一遍 2025.2.8 -
-客户端：SYN
-服务端：SYN + ACK
-客户端：ACK
-SYN - ...不记得了 ❌ // 1、SYN是同步序列编号包
-ACK - 确认信息，有序列号 ❌ // 2、ACK确认包
-```
-
-```js
-// 作业90：金玉满堂是什么意思？在花卉中的说法是什么？
-- 第一遍 2025.2.8 -
-金玉满堂：很多内涵，夸奖 ⭐️ // 形容财富很多、比喻学识丰富
-海棠、(其他的不记得了)
-❌ // 1、花卉中的说法 玉堂春富贵 - 玉兰(玉)、海棠(堂)、迎春(春)、牡丹(富)、桂花(贵)
-```
 
 ```js
 // 作业 89：mysql 中类型的区别：varchar 和 char，date datetime
@@ -440,81 +1008,6 @@ CSRF跨站请求伪造攻击：
 ```
 
 ```js
-// 作业76：显卡的作用？
-- 第二遍 2025.2.2 -
-用于绘制帧
-在后区渲染好之后，直接替换前区帧
-⭐️ // 合成新的图像，并将图形保存到后缓存区
-```
-
-```js
-// 作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
-- 第三遍 2025.2.2 -
-React 合成事件 - 异步；原生事件 - 同步
-❌ // 1、除了合成事件，还有「生命周期函数」中都是异步
-React 在处理 setState 的时候，在执行回调函数时，会创建一个队列存储，执行完回调函数，统一处理队列中的 setState ，有个合并处理机制 ⭐️ // 批量处理机制 + 更新一次 state ，触发一次重新渲染
-在原生事件中不受 React 管控，直接执行 ⭐️ // setState 一次，就会触发一次渲染
-- 第一遍 -
-❌ // 1、除了合成事件，还有生命周期函数
-```
-
-```js
-// 作业61：常见的数据结构有哪些
-- 第三遍 2025.2.2 -
-结构化数据：队列、栈、链表 ❌ // 1、少写了一个类型：数组
-非结构化数据：树、图
-```
-
-```js
-// 作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
-- 第四遍 2025.2.2 -
-高阶函数：输入/输出是函数的函数，例如 map
-高阶组件：输入是组件
-副作用：在函数内部会修改外部参数、全局参数、IO ⭐️ // 除了返回值
-function fun(Child){
-    return class extends React.Component {
-        constructor(props) {
-            super(props);
-        }
-        render() {
-            return Child
-            ❌ // 1、<Child {...this.props} />
-        }
-    }
-}
-```
-
-```js
-// 作业55：flex 常见缩写
-- 第四遍 2025.2.2 -
-flex: none; // 0 0 auto
-flex: 1; // 1 1 0
-flex: auto; // 1 1 auto
-❌ // 1、少写了一个 flex: initial; // 0 1 auto
-- 第二遍 -
-❌ // 1、把 0 0 auto 的缩写写错，应该是 flex: none;
-- 第一遍 -
-❌ // 1、把 0 0 auto 的缩写写错，应该是 flex: none;
-```
-
-```js
-// 作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
-- 第二遍 2025.2.2 -
-宋 苏轼/苏东坡  ❌ // 1、题目记不起来：《水调歌头 明月几时有》
-我欲乘风归去，又恐琼楼玉宇，高处不胜寒
-不知天上宫阙，今夕是何年，何似在人间 ❌ // 2、乱序：起舞弄清影，何似在人间
-/**
-	明月几时有？把酒问青天。不知天上宫阙，今夕是何年。
-	我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
-	起舞弄清影，何似在人间。
-	转朱阁，低绮户，照无眠。
-	不应有恨，何事长向别时圆。
-	人有悲欢离合，月有阴晴圆缺，此事古难全。
-	但愿人长久，千里共婵娟。
-*/
-```
-
-```js
 // 作业54：举杯邀明月，对影成三人。的上一句
 - 第三遍 2025.2.2 -
 花间一壶酒，独酌无相亲
@@ -527,35 +1020,6 @@ flex: auto; // 1 1 auto
 热力学两大定律：能量守恒定律、熵增定律（在自然条件下，变得混乱是趋势
 - 第一遍 -
 ❌ // 1、少写了惯性定律 - 公交车记忆：刹车-加速度、乘客-惯性、地上痕迹-摩擦
-```
-
-```js
-// 作业25：简单写下 请求创建过程
-- 第四遍 2025.2.2 -
-function request(url) {
-    let xhr = new XMLHttpRequest();
-    xhr.onerror = () => {}
-    xhr.ontimeout = () => {}
-    xhr.onreadystate = function (res) {  ❌ // 1、函数名称错误：onreadystatechange
-        switch(this.readyState) { ❌ // 2、属性不在 this 上，在 res 上：res.readyState
-            case 0:// 还未开始请求
-                ❌ // 3、请求还没开始，要使用 break 跳出循环
-            case:4
-                if(this.status === 200 || this.status === 304) {
-                    console.log(this.responseText)
-                }
-        }
-    }
-    xhr.open('GET', url, true); // 允许异步
-    xhr.timeout = 3000;
-    xhr.responseType = 'text';
-    xhr.setRequestHeader(key, value);
-    xhr.send();
-}
-- 第二遍 -
-❌ // 1、属性名称记错 ：res.readyState
-- 第一遍 -
-❌ // 1、open 的参数顺序记错了：xhr.open('GET', url, true)
 ```
 
 1.31 - LTN1 - 8题
@@ -592,116 +1056,6 @@ Function.protytype.fakeBind = function(thisArg, ...args1) {
 ```
 
 ```js
-// 2021.07 数组扁平化（一层、全部展开、指定深度）
-- 第五遍 2025.1.31 -
-一层：arr.flat()、[].concat(...arr)、[].concat.call([], ...arr)、[].concat.apply([], arr)
-全部展开：arr.flat(Infinity)、arr.toString().split(',')、JSON.parse(JSON.stringify(arr))
-❌ //  JSON.parse(JSON.stringify(arr)) 是用于深拷贝的，不能展开
-function expense(arr, deep = 1) {
-    return arr.reduce((pre, cur) => {
-        return pre.concat(Array.isArray(cur) && deep > 1 ? expense(cur, deep - 1) : cur)
-    })
-}
-- 第四遍 2025.1.25 -
-- 第三遍 2025.1.24 -
-❌ // 1、少写了 arr.flat(Infinity)
-❌ // 2、JSON.stringify 不会展开数组
-❌ // 3、全部展开递归函数中，pre 的值不要使用 push 来更新 - concat 既能处理数组，也能处理非数组
-- 第二遍 2025.1.19 -
-❌ // 1、deep 传递的时候要减一
-```
-
-```js
-// 作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
-- 第三遍 2025.1.31 -
-mysql2 是适用于node场景的 mysql 驱动，可以直连数据库，但是需要写很多 SQL
-⭐️ // 提供了 mysql2/promise 模块，允许 async/await 、管理多个数据库连接；没有内置的对象关系映射ORM
-import { createPool } from 'mysql2' ❌ // 1、依赖包错了 mysql2/promise
-const pool = createPool({host, user, password}); ❌ // 2、少写了 database
-const connection = await pool.getConnection(); ❌ // 3、获取连接的函数错了 await pool.getConnect()
-const data = connection.execute('SELECT * FROM table') ❌ // 4、需要使用 await：const [rows] = await connection.execute('SELECT * FROM table')
---
-Sequelize 数据库模块，ORM 把整个数据库表对象化，可以通过函数式编程直接调用使用，执行事务
-⭐️ // ORM 把数据库的表和行映射为对象模型
-import { sequelize, Datatypes, Modal } from 'sequelize'
-const se = new sequelize(database, user, password, {
-    host: 'localhost',
-    dialect: 'mysql2'
-})
-创建连接后，会一直保持连接状态，直到调用 se.close() 关闭连接
-class se extends Modal {}
-se.define('table', {
-    id: Datatypes.number
-}, {
-    underScore: false;
-})
-❌ // 5、有两种模型定义方法：一种是 define，另一种 extends Modal + init
-/**
-const User = se.define('table', {
-    id: Datatypes.number
-}, {
-    underScore: false;
-})
---
-class User extends Modal {}
-User.init({
-	id: Datatypes.number
-}, {
-	sequelize: se, // 传递连接实例
-	modalName: 'User' // 模型名称
-})
-最后调用： User.findAll({ attribute: ['id', 'name'] })
-*/
-
-- 第二遍 2025.1.26 -
-❌ // 1、mysql2 的依赖包是 mysql2/promise
-❌ // 2、mysql2 创建连接池不需要 await:const pool = createPool({host, user, password, database})
-❌ // 3、mysql2 获取连接时需要 await:const connection = await pool.getConnect()
-❌ // 4、mysql2 查询数据时需要 await:const [rows] = await connectiom.execute('SQL')
-❌ // 5、sequelize 实例化创建连接 const s = new sequelize(database, user, password, { host, dialect })
-❌ // 6、sequelize 模型定义的底层 - 先扩展，再init定义
-
-- 第一遍 2025.1.22 -
-❌ // 1、mysql2 提供的连接的两个特点： mysql2/promise 支持 async/await + 管理多个数据库连接池
-❌ // 2、sequelize 将数据库的表和行映射为对象模型，直接通过 js 操作
-```
-
-```js
-// 作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
-- 第三遍 2025.1.31 -
-预渲染：包含服务端渲染 SSR、静态生成SSG、ISR 增量静态生成
-SSR:getServerSideProps 客户端每次请求，都在服务端构建 HTML，动态引入 data 数据，返回给客户端直接渲染，而不是交给客户端js
-SSG+ISR:getDerivedStateParams + revalidate 在构建时，直接生成 HTML，超过更新时间后，后台直接重新构建
-❌ // 1、记错函数名称，13.x 之前是 getStaticProps，现在已经改为 generateStaticParams，用于生成动态路由的参数列表
-SSR
-import { getServerSideProps } from 'next/server'
-function Blog({ data }) { return <div>{data}</div> }
-async function getServerSideProps() {
-    const data = await fetch('xxxx');
-    return { props: { data: data.json() } }
-    ❌ // 2、data.json() 是异步的，异步解析数据，处理 json 数据转换为 js 对象 - const res = await data.json;
-}
-export default Blog;             
-SSG
-function Blog({ data }) { return <div>{data}</div> }
-async function getDerivedStateParams() {
-    const data = await fetch('xxxx');
-    return { props: { data: data.json() } }
-    ❌ // 3、return 的应该是个路由列表 例如 return [{slug: 'first'}, {slug: 'second'}]
-}
-const revalidate = 60; // 秒
-❌ // 4、export const revalidate = 60; // 页面重新验证时间
-export default Blog;
-                         
-- 第二遍 2025.1.26 -
-❌ // 1、SSR getServerSideProps: fetch 数据需要 await: const data = await fetch('xxx')
-❌ // 1、SSR getServerSideProps: 异步解析数据需要 await: const res = await data.json()
-- 第一遍 2025.1.22 -
-❌ // 1、SSG generateStaticParams 用于生成动态路由的参数列表
-❌ // 2、SSG revalidate 用于定义页面重新验证时间 - 页面将重新生成，运行时生成/更新静态页面以增量更新
-```
-
-```js
 // 作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
 - 第二遍 2025.1.31 -
 13.x 开始 Link 中不再写 a 标签用于跳转 - 因为 Link 会被解析为 a 标签
@@ -721,37 +1075,6 @@ js - DOM 树提供了 JS 访问、修改 HTML 的交互接口
 - 第二遍 2025.1.25 -
 - 第一遍 2025.1.24 -
 ❌ // 1、除了js，少写了浏览器 - 渲染页面的依据和框架视角 - VDOM Diff 计算提高更新性能
-```
-
-```js
-// 作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
-- 第六遍 2025.1.31 -
-类组件
-挂载阶段
-getDerivedStateFromProps
-componentDidMount - 首次渲染执行
-render
-❌ // 1、少写了 constructor - 初始化 state 和绑定事件处理函数的 this
-更新阶段
-getDerivedStateFromProps
-componentDidUpdate - 更新后执行
-shouldComponentUpdate(nextProps, nextState) - 返回布尔值判断是否需要重新渲染
-render
-卸载阶段
-componentWillUnMount - 卸载前执行
-
-函数组件
-useEffect 模拟 componentDidMount回调函数执行一次 ⭐️ // 内部函数
-		  模拟 componentDidUpdate 依赖更新，再次执行回调函数
-          模拟 componentWillUnMount 返回一个清理函数，在组件卸载前执行
-useLayoutEffect 在 commit 阶段后，同步执行函数，阻塞重绘
-- 第五遍 2025.1.25 -
-- 第四遍 2025.1.24 -
-❌ // 1、shouldComponentUpdate 写错在挂载阶段，实际应该归属于更新阶段
-❌ // 2、阶段划分是：挂载-更新-卸载，其中更新阶段记错了 - 应该是当组件的 state/props 变化，进入更新阶段，重新执行 render 函数来更新 DOM
-- 第三遍 2025.1.19 -
-❌ // 1、挂载阶段：少写了 constructor - 初始化 state 和绑定时间处理函数的 this
-❌ // 2、除了类组件函数的生命周期，还要意识到函数组件也通过 hooks 模拟生命周期
 ```
 
 ```js
@@ -911,15 +1234,6 @@ function addColor() {
 ```
 
 ```js
-// 2021.06 子盒子在父盒子中水平垂直居中有几种方法？
-- 第一遍 2025.1.30 -
-①flex .father { display: flex; justify-content: center; align-items: center; }
-② .son { position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto;  }
-③ .son { position: absolute; transform: translate(-50%, -50%); left: 50%; top: 50%; }
-④ .son { display: table-cell; text-align: center; vertial-align: middle; } ❌ // 1、不是给子元素 添加 table-cell，这个方法的核心是把 父盒子 设置为 table-cell，使得另外两个属性生效 - 而子盒子作为行内块类型，垂直、居中 .father { display: table-cell; text-align: center; vertical-align: middle; } .son { display: inline-block; }
-```
-
-```js
 // 2019.07 css中的动画特性可以用js实现，那为什么还要用css来实现？
 - 第一遍 2025.1.30 -
 js 实现动画： 占用主线程执行；低版本浏览器可能需要写兼容性代码；
@@ -950,20 +1264,6 @@ async function sleep(delay){
     ⭐️ // 不用写 async + setTimeout 可以简写成 setTimout(resolve, delay)
 }
 await sleep(100);
-```
-
-```js
-// 作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
-- 第一遍 2025.1.30 -
-时间循环系统
-事件：同步类型 - 主线程执行 - 执行完成，清理执行栈之前，从事件队列中获取事件执行 - 所有微任务执行完毕后，进入下一个事件循环
-	 异步类型 - Event Table - 将回调函数投入事件队列 ⭐️ // Event Queue
-⭐️ // 等异步任务有了结果，将回调函数投入事件队列
-宏任务 ： UI渲染、IO下载、js代码、setTimeout/setTimeInterval ⭐️ // IO表示下载和交互
-微任务： MutationObserver、Promise.then、async/await
-1 5 2 6 3 4 ❌ // 125364 
-script start - async1 start - async2 - promise1 - script end
-- async1 end - promise2 - promise3 - setTimeout
 ```
 
 ```js
@@ -1031,15 +1331,6 @@ SORT BY t.date
 ```
 
 ```js
-// 作业3：迭代器原理
-- 第二遍 2025.1.30 -
-提供暂停和恢复代码执行能力，[Symbol.iterater] 默认迭代器
-yield 暂停，next 恢复执行 {done, value}
-❌ // 迭代器使用 next 方法在可迭代对象中遍历数据
-- 第一遍 2024.12.25 -
-```
-
-```js
 // 作业41：TED 如何解决焦虑
 - 第二遍 2025.1.30 -
 1、列出所有可以解决问题的方案，去做 do it badly ⭐️ // anything worth doing worth doing badly the first time
@@ -1091,36 +1382,6 @@ const store = createStore(reducer);
 store.dispatch({ type: 'add' });
 store.subscribe(() => { console.log(store.getState()) })
 - 第一遍 2025.1.22 -
-```
-
-```js
-// 作业66：React如何处理错误
-- 第六遍 2025.1.29 -
-React 提供两个函数处理错误 static getStateFromError()、componentDidCatch，用于捕获 
-❌ // 1、静态函数名称错了 getDerivedStateFromError
-render+commit 阶段的错误，阻止错误蔓延到整个应用影响 UI 展示
-几个情况不会捕获：异步、回调、ssr、错误边界内部
-class Boundaries extends React.Component{
-    constructor() {
-        super(props);
-        this.state = { hasError: false }
-    }
-    static getStateFromError() { ❌ // 2、getDerivedStateFromError
-        return { hasError: true }
-    }
-    componentDidCatch(e, info) {
-        console.log(e)
-    }
-    render() {
-        if(this.state.hasError) {
-            return <p> There are errs. </p>
-        } else {
-            return this.props.children;
-        }
-    }
-}
-- 第五遍 2025.1.22 -
-- 第四遍 2025.1.18 -
 ```
 
 1.28 - LTN1 - 2题
@@ -1189,20 +1450,6 @@ class Boundaries extends React.Component{
 清除浮动：①给父级元素添加高度 ②父盒子里最后添加一个盒子 .box {clear:both} ③父盒子添加伪元素 .father::before{ content:''; display: block; clear: both; } ④BFC .father{ overflow: hidden } - BFC 的盒子计算高度时包含浮动元素
 - 第一遍 1.20 -
 ❌ // 1、写错了：是给父元素添加BFC + 父盒子设置高度（宽度不行
-```
-
-```js
-// 作业6：new操作符实例化一个对象的过程
-- 第二遍 1.28 -
-function newFun () {
-    let obj = new Object();
-    const ctor = [].shift.call(arguments);
-    obj.__proto__ = ctor; ❌ // 1、不是构造函数，是构造函数的原型对象 obj.__proto__ = ctor.prototype;
-    const res = ctor.apply(obj, arguments);
-	return typeof res === 'object' ? res : obj;
-}
-- 第一遍 1.20 -
-❌ // 1、不是调整 constructor 的指向
 ```
 
 ```js
