add box1: 69. x 的平方根 的两个方法

--- a/_posts/算法、刷题/2021-06-29-[69]. x 的平方根.md
+++ b/_posts/算法、刷题/2021-06-29-[69]. x 的平方根.md
@@ -19,6 +19,39 @@ typora-root-url: ..
 
 由于返回类型是整数，结果只保留整数的部分，小数部分将被舍去。
 
+总结：逻辑是一样的，找到区间 [i, i+1)
+
+```js
+// 方法一：执行时长稍长，但内存占用小
+function sqrt(x) {
+    const mid = Math.ceil(x/2); // 优化点
+    let i = 0;
+    for(; i < mid; i++) {
+        if ((i * i <= x) && ((i + 1) * (i + 1) > x)) { // 注意这里要给 = 号，否则会遗漏
+            return i;
+        }
+    }
+    return i
+};
+// 方法二 开区间 (left, right)：执行时间短，但内存占用大点儿
+function mySqrt3(x) {
+    let left = 0, right = Math.min(x + 1, 46341);
+    while (left + 1 < right) {
+        // 循环不变量：left^2 <= x && right^2 > x
+        let m = Math.floor((left + right) / 2);
+        if (m * m <= x) {
+            left = m;
+        } else {
+            right = m;
+        }
+    }
+    // 循环结束时得到 left+1 == right，此时 left^2 <= x 且 right^2 > x
+    return left; // 所以 left 最大的满足 m^2 <= x 的数
+};
+```
+
+
+
 解答：
 
 - 方法一：遍历
@@ -31,7 +64,7 @@ typora-root-url: ..
 
 ```js
 var mySqrt = function(x) {
-    let mid = Math.ceil(x/2);
+    const mid = Math.ceil(x/2);
     let i = 0;
     for(; i < mid; i++) {
         // 注意这里要给 = 号，否则会遗漏
